Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32142

QDeclarativeContactOnlineAccount does not export protocol property

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.1.0
    • 5.1.0 RC2
    • PIM: Contacts
    • None
    • I4e3a5fda659bbb48b56e83b96de3e59a03549c31

      The QContactOnlineAccount::protocol property and the enum QContactOnlineAccount::Protocol is not accessible from QML.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            renatofilho renato araujo oliveira filho
            renatofilho renato araujo oliveira filho
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes