Created protocol property in QDeclarativeContactOnlineAccount.

Exported protocol property and OnlineAccountProtocol enum in QDeclarativeContactOnlineAccount.

Task-number: QTBUG-32142

Change-Id: I4e3a5fda659bbb48b56e83b96de3e59a03549c31
Reviewed-by: Christopher Adams <chris.adams@jollamobile.com>
Reviewed-by: Alex <alexander.blasche@digia.com>